--- a/SqlExcelExporter/SqlExcelExporter/App.config
+++ b/SqlExcelExporter/SqlExcelExporter/App.config
@@ -3,4 +3,8 @@
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.7.2" />
     </startup>
+    <appSettings>
+      <add key="Encryption" value="x6@+cPHTuq#GkZLF"/>
+      <add key="Decryption" value="H@tz0LaH1@2#"/>
+    </appSettings>
 </configuration>
