Added data read and excel export

--- a/SqlExcelExporter/SqlExcelExporter/App.config
+++ b/SqlExcelExporter/SqlExcelExporter/App.config
@@ -7,4 +7,7 @@
       <add key="Encryption" value="x6@+cPHTuq#GkZLF"/>
       <add key="Decryption" value="H@tz0LaH1@2#"/>
     </appSettings>
+    <connectionStrings>
+      <add name="DefaultConnection" connectionString="Data Source=localhost;Initial Catalog=HatzolahWellnessToolkit; persist security info = True; Integrated Security=SSPI;" providerName="System.Data.SqlClient" />
+    </connectionStrings>
 </configuration>
